force-app/main/default/objects/User_Audit_Log_Detail__c/User_Audit_Log_Detail__c.object-meta.xml
<CustomObject>
    <description>A user audit log detail for a single user.  There should be one of these for each user that was returned by the audit search.</description>
    <label>User Audit Log Detail</label>
    <nameField>
        <label>User Audit Log Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Audit Log Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>