force-app/main/default/objects/User_Audit_Log_Detail__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <description>The search key value.</description>
    <externalId>true</externalId>
    <inlineHelpText>The search key value.</inlineHelpText>
    <label>Alias</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>