force-app/main/default/objects/User_Audit_Log_Detail__c/fields/Audit_Asurite__c.field-meta.xml
<CustomField>
    <fullName>Audit_Asurite__c</fullName>
    <description>Return Asurite from User Audit Match</description>
    <formula>Mid(  Name,1, Find(" ",Name))</formula>
    <inlineHelpText>Return Asurite from User Audit Match</inlineHelpText>
    <label>Audit Asurite</label>
    <type>Text</type>
</CustomField>