force-app/main/default/objects/User_Audit_Log_Detail__c/fields/Audit_Role__c.field-meta.xml
<CustomField>
    <fullName>Audit_Role__c</fullName>
    <formula>MID(User_Audit_Log__r.Name,15, (Find("at",User_Audit_Log__r.Name)-15) )</formula>
    <label>Audit Role</label>
    <type>Text</type>
</CustomField>