force-app/main/default/objects/User_Audit_Log_Detail__c/fields/Audit_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Audit_User_Name__c</fullName>
    <description>Name of user being audit</description>
    <formula>User__r.FirstName &amp;" "&amp; User__r.LastName</formula>
    <inlineHelpText>Audit User Name</inlineHelpText>
    <label>Audit User Name</label>
    <type>Text</type>
</CustomField>