force-app/main/default/objects/User_Audit_Log_Detail__c/fields/Matched__c.field-meta.xml
<CustomField>
    <fullName>Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this successfully matched to a user?</description>
    <inlineHelpText>Was this successfully matched to a user?</inlineHelpText>
    <label>Matched</label>
    <type>Checkbox</type>
</CustomField>