force-app/main/default/objects/User_Audit_Log_Detail__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which user was this audit log detail for?</description>
    <inlineHelpText>Which user was this audit log detail for?</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Audit_Log_Details</relationshipName>
    <type>Lookup</type>
</CustomField>