force-app/main/default/objects/User_Audit_Log_Detail__c/fields/User_Audit_Log__c.field-meta.xml
<CustomField>
    <fullName>User_Audit_Log__c</fullName>
    <description>The parent audit log.  This is the audit log this detail record was generated as a result of.</description>
    <inlineHelpText>The parent audit log.  This is the audit log this detail record was generated as a result of.</inlineHelpText>
    <label>User Audit Log</label>
    <referenceTo>User_Audit_Log__c</referenceTo>
    <relationshipLabel>User Audit Log Details</relationshipLabel>
    <relationshipName>User_Audit_Log_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>